--- a/weiming-frontend/package.json
+++ b/weiming-frontend/package.json
@@ -16,55 +16,56 @@
     "serverWatch": "./node_modules/.bin/nodemon app.js --exec ./node_modules/.bin/babel-node",
     "test": "./node_modules/.bin/jest",
     "watch": "./node_modules/.bin/webpack --watch --progress --mode=development",
-    "webpack": "npm run webpack-library && npm run webpack-src && cp ./src/client/assets/icon.ico public/assets/icon.ico",
+    "webpack": "npm run webpack-library && npm run webpack-src && cp -a ./src/client/assets/. public/assets/",
     "webpack-library": "./node_modules/.bin/webpack --progress --config library.webpack.config.js",
     "webpack-src": "./node_modules/.bin/webpack --progress"
   },
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@babel/preset-env": "^7.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.0.0",
-    "@vue/babel-preset-jsx": "^1.0.0",
-    "app-root-path": "^2.1.0",
+    "@vue/babel-preset-jsx": "^1.1.1",
+    "@vue/composition-api": "^0.3.4",
+    "app-root-path": "^2.2.1",
     "autodll-webpack-plugin": "^0.4.2",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "deepmerge": "^3.2.0",
-    "express": "^4.16.4",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "deepmerge": "^3.3.0",
+    "express": "^4.17.1",
     "file-loader": "^3.0.1",
+    "highcharts": "^7.2.1",
+    "highcharts-more": "^0.1.7",
+    "highcharts-vue": "^1.3.5",
     "idempotent-babel-polyfill": "^7.4.4",
     "json-loader": "^0.5.7",
-    "node-fetch": "^2.3.0",
-    "node-sass": "^4.11.0",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.5.0",
+    "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^2.0.0",
     "redis": "^2.8.0",
     "request-promise-native": "^1.0.7",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "thread-loader": "^2.1.2",
-    "uuid": "^3.3.2",
-    "vue": "^2.5.22",
-    "vue-loader": "^15.5.1",
-    "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.5.22",
+    "thread-loader": "^2.1.3",
+    "uuid": "^3.3.3",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.0.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
-  },
-  "devDependencies": {
-    "tape": "^4.7.0"
+    "vuex-persist": "^2.1.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "repository": {},
   "keywords": [
